--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -4,48 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.SendFragment">
-
-    <Button
-        android:id="@+id/select_file"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/select_file"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="openFileDialog"/>
+    tools:context=".view.activities.SendActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/file_text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/sending_file"
+        app:layout_constraintBottom_toTopOf="@+id/send_progress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/select_file" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/search_destination"
-        android:text="@string/send_file"
-        android:enabled="false"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/text_percentage"
+        android:text="N/A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/file_text" />
+        app:layout_constraintTop_toBottomOf="@+id/send_progress" />
 
-    <Button
+    <TextView
+        android:id="@+id/text_speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Envoyer le fichier"
-        android:id="@+id/send_file"
+        android:text="N/A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_percentage" />
+
+    <ProgressBar
+        android:id="@+id/send_progress"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:min="0"
+        android:max="100"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/file_text"
-        android:visibility="gone"
-        android:enabled="false"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
