--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -4,22 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.ReceiveFragment"
-    android:layout_margin="50dp">
+    tools:context=".view.fragments.ReceiveFragment">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
+    <Button
+        android:id="@+id/send_signal_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/send_signal_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible"/>
+
+    <ProgressBar
+        android:id="@+id/signal_progressbas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/send_signal_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textview_second"
+        android:id="@+id/send_signal_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/waiting_destination"
+        android:text="@string/waiting_for_file"
+        app:layout_constraintBottom_toTopOf="@+id/send_signal_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        android:visibility="gone"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cancel_btn"
+        android:enabled="false"
+        android:text="@string/cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/send_signal_btn"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
